--- a/SistemaFact/SistemaFact/SistemaFact.csproj
+++ b/SistemaFact/SistemaFact/SistemaFact.csproj
@@ -164,6 +164,7 @@
   <ItemGroup>
     <Content Include="Iconos\add.ico" />
     <Content Include="Iconos\cancel.ico" />
+    <None Include="Iconos\CodigoBarra.jpg" />
     <Content Include="Iconos\page_add.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
