--- a/SistemaFact/SistemaFact/App.config
+++ b/SistemaFact/SistemaFact/App.config
@@ -4,9 +4,12 @@
     </configSections>
     <connectionStrings>
         <add name="SistemaFact.Properties.Settings.FACTURACIONConnectionString"
-            connectionString="Data Source=DESKTOP-QKECIIE;Initial Catalog=FACTURACION;Integrated Security=True"
+            connectionString="Data Source=SECRETARIA-2\SQLEXPRESS;Initial Catalog=FACTURACION;Integrated Security=True"
             providerName="System.Data.SqlClient" />
-    </connectionStrings>
+<!--      <add name="SistemaFact.Properties.Settings.FACTURACIONConnectionString"
+            connectionString="Data Source=DESKTOP-QKECIIE;Initial Catalog=FACTURACION;Integrated Security=True"
+            providerName="System.Data.SqlClient" /> -->
+    </connectionStrings> 
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
