--- a/SistemaFact/SistemaFact/App.config
+++ b/SistemaFact/SistemaFact/App.config
@@ -3,12 +3,13 @@
     <configSections>
     </configSections>
     <connectionStrings>
+      <!--
         <add name="SistemaFact.Properties.Settings.FACTURACIONConnectionString"
             connectionString="Data Source=SECRETARIA-2\SQLEXPRESS;Initial Catalog=FACTURACION;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-<!--      <add name="SistemaFact.Properties.Settings.FACTURACIONConnectionString"
-            connectionString="Data Source=DESKTOP-QKECIIE;Initial Catalog=FACTURACION;Integrated Security=True"
             providerName="System.Data.SqlClient" /> -->
+      <add name="SistemaFact.Properties.Settings.FACTURACIONConnectionString"
+            connectionString="Data Source=DESKTOP-QKECIIE;Initial Catalog=FACTURACION;Integrated Security=True"
+            providerName="System.Data.SqlClient" /> 
     </connectionStrings> 
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
