--- a/SistemaFact/SistemaFact/SistemaFact.csproj
+++ b/SistemaFact/SistemaFact/SistemaFact.csproj
@@ -91,6 +91,18 @@
     <Compile Include="FrmAbmArticulocs.Designer.cs">
       <DependentUpon>FrmAbmArticulocs.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmAbmColores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAbmColores.Designer.cs">
+      <DependentUpon>FrmAbmColores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmAbmTipoPrenda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAbmTipoPrenda.Designer.cs">
+      <DependentUpon>FrmAbmTipoPrenda.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmAltaBasica.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +143,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAbmArticulocs.resx">
       <DependentUpon>FrmAbmArticulocs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAbmColores.resx">
+      <DependentUpon>FrmAbmColores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAbmTipoPrenda.resx">
+      <DependentUpon>FrmAbmTipoPrenda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAltaBasica.resx">
       <DependentUpon>FrmAltaBasica.cs</DependentUpon>
